flickering is resolve

--- a/src/components/Home/home-posts/create-post/create-post.scss
+++ b/src/components/Home/home-posts/create-post/create-post.scss
@@ -109,6 +109,12 @@
                 border-radius: inherit;
                 position: relative;
 
+                .photo-file-from-pc {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px;
+                }
+
                 .add-photo-icon-cover {
                     width: 50px;
                     height: 50px;
